--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         formData.append('file', blob, 'photo.png');
 
         // 5. Flask 서버에 POST 전송
-        fetch('https://fb56-34-34-80-110.ngrok-free.app/detect', {
+        fetch('https://6485-34-34-80-110.ngrok-free.app/detect', {
           method: 'POST',
           body: formData,
         })
