--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         formData.append('file', blob, 'photo.png');
 
         // 5. Flask 서버에 POST 전송
-        fetch('https://8687-34-34-80-110.ngrok-free.app/detect', {
+        fetch('https://aceb9e4c3c8b.ngrok-free.app/detect', {
           method: 'POST',
           body: formData,
         })
